--- a/Solutions/Exercise 02.04.html
+++ b/Solutions/Exercise 02.04.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
-    <iframe name="CorkETB" src="http://corktrainingcentre.ie" width="500px" style="border: 5px solid red;"></iframe>
+    <iframe name="CorkETB" src="http://corktrainingcentre.ie" width="500px"></iframe>
+    <!--style="border: 5px solid red;"-->
 </body>
 </html>
