--- a/Solutions/Exercise 02.04.html
+++ b/Solutions/Exercise 02.04.html
@@ -8,7 +8,8 @@
     
 </head>
 <body>
-    <iframe name="CorkETB" src="http://corktrainingcentre.ie" width="500px"></iframe>
+    <iframe name="CorkETB" src="http://corktrainingcentre.ie" width="500px" ></iframe>
+    <!-- The following style was removed from the iframe:-->
     <!--style="border: 5px solid red;"-->
 </body>
 </html>
